third_party/rust/chromium_crates_io/vendor/toml_edit-0.22.22/tests/fixtures/invalid/control/rawmulti-cd.stderr
TOML parse error at line 1, column 24
  |
1 | rawmulti-cd   = '''null
'''
  |                        ^
invalid multiline literal string
